Finished everything but adding ai

--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1 class="header">Tic-Tac-Toe</h1>
+    <h4>Player O Starts First</h4>
     <div class="gameboard">
         <div id="squares">
 
